--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -39,15 +39,29 @@
         android:text="TextView"
         android:textColor="@android:color/black" />
 
+    <ImageView
+        android:id="@+id/ivHeartFiller"
+        android:layout_width="30dp"
+        android:layout_height="27dp"
+        android:layout_alignBottom="@+id/ibFavorite"
+        android:layout_alignStart="@+id/ibFavorite"
+        android:layout_marginBottom="15dp"
+        android:layout_marginStart="15dp"
+        app:srcCompat="@drawable/ic_favorite_black_24dp"
+        android:tint="@color/colorHeart"
+        android:scaleType="fitXY"
+        android:visibility="invisible"
+        />
 
-
-    <Button
-        android:id="@+id/btnFavorite"
+    <ImageButton
+        android:id="@+id/ibFavorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/tvTitle"
-        android:text="Favorite" />
+        android:layout_alignBottom="@+id/tvTitle"
+        android:src="@drawable/ic_favorite_border_black_24dp"
+        android:backgroundTint="@android:color/transparent"
+        android:layout_marginBottom="-13dp"/>
 
 
 </RelativeLayout>
