--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#ffff50</color>
     <color name="colorAccent">#00ffbf</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorHeart">#c72542</color>
+    <color name="colorBlack">#000000</color>
 </resources>
