--- a/app/src/main/res/layout/activity_view_story.xml
+++ b/app/src/main/res/layout/activity_view_story.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/ivImage"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="100dp"
         app:srcCompat="@color/colorAccent"
         android:layout_alignParentTop="true"
