--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,7 +11,7 @@
         android:id="@+id/rlProfileInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray">
+        android:background="@color/colorAccent">
 
         <ImageView
             android:id="@+id/ivProfileImage"
