--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -17,10 +17,7 @@
         android:layout_marginTop="20dp"
         android:layout_alignParentStart="true" />
 
-    <ScrollView
-        android:id="@+id/scrollView1"
-        android:layout_width="fill_parent"
-        android:layout_height="100dp" >
+
         <EditText
             android:id="@+id/etTitle"
             android:layout_width="match_parent"
@@ -29,7 +26,7 @@
             android:layout_alignTop="@+id/tvTitle"
             android:layout_alignParentStart="true"
             android:layout_marginTop="20dp" />
-    </ScrollView>
+
 
 
     <TextView
@@ -41,23 +38,27 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="20dp" />
 
+
     <EditText
         android:id="@+id/etStoryBody"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="20"
-        android:inputType="textCapSentences"
-        android:scrollbars="vertical"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/tvBody"
-        android:layout_alignParentEnd="true" />
+        android:lines="2"
+        android:maxLines="5"
+        android:inputType="textMultiLine"
+        android:scrollbars="vertical" />
+
 
     <Button
         android:id="@+id/btSave"
         android:text="Create"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:layout_below="@+id/etStoryBody"
-        android:layout_alignParentStart="true" />
+        android:layout_toEndOf="@+id/editText5" />
 
     <Button
         android:id="@+id/bTakePhoto"
@@ -73,8 +74,8 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         app:srcCompat="@color/colorAccent"
-        android:layout_below="@+id/ibCalendar"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/bTakePhoto"
+        android:layout_alignStart="@+id/btSave" />
 
     <Button
         android:id="@+id/btImportPhoto"
