--- a/app/src/main/res/layout/activity_author.xml
+++ b/app/src/main/res/layout/activity_author.xml
@@ -14,7 +14,6 @@
         android:layout_height="50dp"
         android:id="@+id/tvTitle"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
         android:layout_alignParentStart="true" />
 
 
@@ -157,8 +156,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Post anonymously?"
+        android:layout_alignBaseline="@+id/rHistorical"
         android:layout_alignBottom="@+id/rHistorical"
-        android:layout_toEndOf="@+id/rHistorical"
-        android:layout_below="@+id/rPersonal" />
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/rHistorical" />
 
 </RelativeLayout>
